# jarxiv-bot

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/: pull_request_template.md
src/jarxiv/: commands.py  jarxiv.py  papers.py  utils.py
tests/: test_dummy.py
