[tool.poetry]
name = "jarxiv"
version = "0.0.1"
description = "Jar(vis)(ar)Xiv Bot is a Telegram bot that allows users to easily retrieve the latest academic papers from the arXiv repository by querying the arXiv API using arxiv.py. Users can filter papers by specific authors or keywords found in titles and abstracts, making it an efficient tool for researchers to stay updated on relevant publications."
authors = ["Marco Gobbo <marco.gobbo@mib.infn.it>"]
license = "Apache License 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
python-telegram-bot = {extras = ["job-queue"], version = "^21.6"}
arxiv = "^2.1.3"
pre-commit = "^4.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.tests]
optional = true

[tool.poetry.group.tests.dependencies]
pytest = "^8.1.1"

[tool.poetry.group.analysis]
optional = true

[tool.poetry.group.analysis.dependencies]
pylint = "^3.1.0"
pylint-exit = "^1.2.0"
